--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -17,6 +17,10 @@
 # For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
 
+##The following two lines are from https://github.com/marketplace/actions/setup-net-core-sdk and set up .net for the workflow
+- name: Setup .NET Core SDK
+  uses: actions/setup-dotnet@v3.0.3
+
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
